--- a/index.html
+++ b/index.html
@@ -1370,10 +1370,42 @@
         box-shadow: 0 16px 32px rgba(255, 149, 0, 0.16);
       }
 
+      body.mobile-redesign #home.page {
+        padding: 0;
+        background: transparent;
+        border: none;
+        box-shadow: none;
+      }
+
+      body.mobile-redesign #home .promo-banner {
+        background: linear-gradient(180deg, #FFE9E2 0%, #FFE3CE 100%);
+        border: none;
+        box-shadow: 0 10px 26px rgba(255, 149, 0, 0.12);
+        margin-top: 4px;
+      }
+
+      body.mobile-redesign #home .btn-secondary {
+        padding: 9px 14px;
+        font-weight: 700;
+        font-size: 14px;
+        color: var(--texto-negro);
+        border: 1px solid #FFE0B2;
+        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.06);
+      }
+
+      body.mobile-redesign #home .section-header h2 {
+        font-size: 22px;
+        margin: 20px 0 12px;
+      }
+
       body.mobile-redesign .access-cards,
       body.mobile-redesign .document-list {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        background: transparent;
+        border: none;
+        box-shadow: none;
       }
 
       body.mobile-redesign .section-header h2 {
@@ -1383,15 +1415,25 @@
 
       body.mobile-redesign .tarjeta-acceso,
       body.mobile-redesign .documento-item {
-        background: #FFFDF9;
-        border: 1px solid #FFE0B2;
+        background: #fff;
+        border: 1px solid #F0F0F0;
         border-radius: 18px;
-        box-shadow: inset 0 0 0 1px rgba(255, 184, 0, 0.12), 0 10px 20px rgba(0,0,0,0.05);
+        box-shadow: 0 8px 18px rgba(0, 0, 0, 0.06);
+        padding: 16px;
       }
 
       body.mobile-redesign .tarjeta-acceso h3,
       body.mobile-redesign .documento-item h3 {
-        font-size: 15px;
+        font-size: 16px;
+      }
+
+      body.mobile-redesign .document-list {
+        background: rgba(255, 255, 255, 0.96);
+        border: 1px solid #FFE0B2;
+        border-radius: 20px;
+        box-shadow: 0 14px 30px rgba(255, 149, 0, 0.12);
+        padding: 14px;
+        gap: 12px;
       }
 
       body.mobile-redesign .documento-item .meta {
