Make HF token validation non-blocking

--- a/index.html
+++ b/index.html
@@ -6395,13 +6395,23 @@
         }
 
         if (hfToken) {
-          const hfResponse = await fetch('https://huggingface.co/api/whoami', {
-            headers: { Authorization: `Bearer ${hfToken}` }
-          });
+          // La validación estricta del token de Hugging Face puede fallar por
+          // motivos de red o limitaciones temporales. Para evitar bloquear al
+          // usuario, registramos el token y continuamos, dejando que las
+          // llamadas posteriores lo validen de forma implícita.
+          try {
+            const hfResponse = await fetch('https://huggingface.co/api/whoami', {
+              headers: { Authorization: `Bearer ${hfToken}` }
+            });
 
-          if (!hfResponse.ok) {
-            return { valid: false, message: 'Token de Hugging Face inválido' };
+            if (!hfResponse.ok) {
+              console.warn('⚠️ No se pudo validar el HF Token en prechequeo, continuando de todas formas');
+            }
+          } catch (error) {
+            console.warn('⚠️ Error al validar HF Token, se omitirá la verificación previa:', error);
           }
+
+          console.log('✅ Token de Hugging Face configurado');
         }
 
         return { valid: true, message: 'Claves validadas correctamente' };
