Restrict mobile player header to small screens

--- a/index.html
+++ b/index.html
@@ -473,7 +473,6 @@
     .mobile-cta.primary .icon { background: rgba(255, 255, 255, 0.2); border: none; color: #fff; }
 
     .mobile-player-header {
-      display: grid;
       gap: 8px;
       background: linear-gradient(180deg, #fffaf1, #fff3e0);
       border: 1px solid #ffe0b2;
@@ -1233,8 +1232,8 @@
       .documento-item .meta { flex-wrap: wrap; }
       .player-toolbar { display: none; }
       .mobile-hero,
-      .mobile-action-grid,
-      .mobile-player-header { display: block; }
+      .mobile-action-grid { display: block; }
+      .mobile-player-header { display: grid; }
       .player-body { gap: 14px; }
       .controles { gap: 12px; flex-wrap: wrap; }
       .ctrl-btn { width: 52px; height: 52px; }
